--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>Заголовок</title>
+	<title>Пост внутри</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,180 +29,200 @@
 	<script src="libs/search/modernizr.custom.js"></script>
 </head>
 <body>
-<div class="wrapper">
-	<header class="top_header">
-		<div class="header_topline">
-			<div class="container">
-				<div class="row">
+
+	<div class="wrapper">
+
+		<header class="top_header">
+			<div class="header_topline">
+				<div class="container">
 					<div class="col-md-12">
-						<div class="soc_buttons">
-							<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-							<a href="#"><i class="fa fa-vk"></i></a>
-						</div>
-						<div class="contacts_head">
-							<p><span><i class="fa fa-phone"></i> Phone</span></p>
-							<p><i class="fa fa-envelope-o"></i><a href="#">Mail</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="header_shapka">
-			<div class="container">
-				<div class="col-md-12">
-					<div class="row">
-
-						<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
-
-						<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
-
-						<div class="main_menu">
-							<ul class="sf-menu">
-								<li class="active"><a href="#"><i class="fa fa-home"></i>Головна</a></li>
-								<li><a href="#"><i class="fa fa-file-text"></i>Методички</a></li>
-								<li><a href="#"><i class="fa fa-archive"></i>Бух облік</a>
-									<ul class="submenu">
-										<li><a href="#">Алалай</a></li>
-										<li><a href="#">Махалай</a></li>
-										<li><a href="#">Мухалай</a></li>
-										<li><a href="#">Тундурик</a></li>
-									</ul>
-								</li>
-								<li><a href="#"><i class="fa fa-folder"></i>Каталог файлів</a></li>
-							</ul>
-						</div>
-
-							<div id="sb-search" class="sb-search">
-								<form>
-									<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
-									<input class="sb-search-submit" type="submit" value="">
-									<span class="sb-icon-search"></span>
-								</form>
+						<div class="row">
+							<div class="top_links">
+								<a href="#" target="_blank">Вхід</a> / 
+								<a href="#" target="_blank">Реєстрація</a>
 							</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-
+							<div class="soc_buttons">
+								<a href="#"><i class="fa fa-odnoklassniki"></i></a>
+								<a href="#"><i class="fa fa-vk"></i></a>
+								<a href="#"><i class="fa fa-envelope-o"></i></a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</header>
 
-	<div class="main_content">
-		<div class="container">
+			<div class="header_shapka">
+				<div class="container">
+					<div class="col-md-12">
+						<div class="row">
+							<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
+							<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
+					<div class="border"></div>
+					<div class="col-md-9">
+						<div class="row">
+							<div class="main_menu">
+								<ul class="sf-menu">
+									<li class="active icon_mob"><a href="#"><img src="img/menu_icons/home.png" alt="home_icon">Головна</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/file.png" alt="file_icon">Методички</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/archive.png" alt="archive_icon">Бух облік</a>
+										<ul class="submenu">
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Алалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Махалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Мухалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Тундурик</a></li>
+										</ul>
+									</li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+								<div id="sb-search" class="sb-search">
+									<form>
+										<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
+										<input class="sb-search-submit" type="submit" value="">
+										<span class="sb-icon-search"></span>
+									</form>
+								</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
 
-			<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-				<div class="row">
-					<div class="blog_content">
-						<div class="zagolov">Стаття</div>
-							<div class="box_blog" id="box_blog1">
-									<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
-									<div class="post_meta">
-										<ul>
-										<li><i class="fa fa-eye"></i>144</li>
-										<li><i class="fa fa-check-square"></i>Mishina</li>
-										<li><i class="fa fa-calendar"></i>04.06.2014</li>
-										<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+		<div class="main_content">
+			<div class="container">
+				<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+					<div class="row">
+						<div class="blog_content">
+							<div class="zagolov">Стаття</div>
+								<div class="box_blog">
+											<div class="post_title"><h2><a href="#">Заголовок поста</a></h2></div>
+											<div class="post_meta">
+												<ul>
+												<li><i class="fa fa-eye"></i>144</li>
+												<li><i class="fa fa-check-square"></i>Mishina</li>
+												<li><i class="fa fa-calendar"></i>04.06.2014</li>
+												<li><i class="fa fa-commenting-o"></i>Коментарі (0)</li>
+											</ul>
+										</div>
+									<div class="test clearfix">
+											<a href="#"><img class="post_img" src="img/1c.png" alt="1c"></a>
+											<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,
+											обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
+											«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
+											у всіх етапах тренінгу.За підсумками проведення заходу  учасники були нагороджені сертифікатами, грамотами та пам’ятними Равным образом укрепление и развитие структуры способствует подготовки и реализации новых предложений. С другой стороны сложившаяся структура организации способствует подготовки и реализации существенных финансовых и административных условий.
+
+											Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения систем массового участия. Разнообразный и богатый опыт рамки и место обучения кадров требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции способствует подготовки и реализации направлений прогрессивного развития.
+
+											Разнообразный и богатый опыт консультация с широким активом в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации дальнейших направлений развития. Равным образом постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание соответствующий условий активизации. Задача организации, в особенности же реализация намеченных плановых заданий требуют от нас анализа новых предложений. Товарищи! новая модель организационной деятельности позволяет оценить значение системы обучения кадров, соответствует насущным потребностям.
+
+											Таким образом рамки и место обучения кадров способствует подготовки и реализации форм развития. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке форм развития. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач.
+
+											С другой стороны укрепление и развитие структуры позволяет оценить значение форм развития. С другой стороны укрепление и развитие структуры в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации способствует подготовки и реализации дальнейших направлений развития. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции требуют определения и уточнения направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности требуют определения и уточнения новых предложений.</p>
+											</div>
+									</div>
+								</div>
+							<div class="single_button"><a href="#">Повернутися до головної</a></div>
+						</div>
+					</div>
+				</div>
+
+				<div class="sidebar">
+					<div class="col-lg-3 col-md-4">
+						<div class="row">
+							<div class="sidebar1">
+								<div class="zagolov" id="zagolov_sidebar">Останні записи</div>
+								<div class="recposts">
+									<ul>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
 									</ul>
 								</div>
-								<div class="post_text"><p>  Для студентів була складена цікава і різноманітна програма,яка включала виступи викладачів,
-								обговорення проблемних питань. Практичний блок тренінгу проводився у вигляді бізнес-гри 
-								«Бухгалтерське Лукомор'я» та «Маркетинг у моєму житті». Студенти активно приймали участь 
-								у всіх етапах тренінгу,демонстрували свою ерудицію,знання професії та практичні навички. 
-								За підсумками проведення заходу  учасники були нагороджені сертифікатами,грамотами 
-								та пам’ятними Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-
-							"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-
-							1914 translation by H. Rackham
-
-							"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
-
-							Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-
-							"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p></div>
-							<div class="next_page"><button><a href="#">Наступна стаття<i class="fa fa-chevron-circle-right"></i></a></button></div>
 							</div>
 
+							<div class="sidebar2">
+								<div class="zagolov" id="zagolov_sidebar">Корисні посилання</div>
+								<div class="useflinks">
+									<ul>
+										<li><a href="#"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+									</ul>
+								</div>
+							</div>
+
+							<div class="sidebar3">
+								<div class="zagolov" id="zagolov_sidebar">Статистика</div>
+								<div class="statistics">
+									<ul>
+										<li>Онлайн всього: 1</li>
+										<li>Гостей: 1</li>
+										<li>Користувачів: 0</li>
+									</ul>
+								</div>
+							</div>
+							<div class="mail_form">
+								<a href="#callback" class="button fancybox">Надіслати повідомлення</a>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="col-lg-3 col-md-3">
-				<div class="row">
-					<div class="sidebar1">
-						<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-						Sidebar_1
-					</div>
-				</div>
 			</div>
-
-			<div class="col-lg-3 col-md-3">
-				<div class="row">
-					<div class="sidebar2">
-						<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-						Sidebar_2
-					</div>
-				</div>
-			</div>
-
-			<div class="col-lg-3 col-md-3">
-				<div class="row">
-					<div class="sidebar3">
-						<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-						Sidebar_3
-					</div>
-				</div>
-			</div>
-
 		</div>
+
+		<div class="hidden">
+			<form id="callback" class="pop_form">
+				<h3>Надіслати повідомлення на Gmail</h3>
+				<input type="text" name="name" placeholder="Ваше ім'я..." required /><br>
+				<textarea type="text" name="massage" required></textarea><br>
+				<button class="button" type="submit">Відправити</button>
+			</form>
+		</div>
+
+		<div class="footer">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="row">
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
+				<div class="row">
+					<div class="social_footer">
+						<a href="#"><i class="fa fa-odnoklassniki"></i></a>
+						<a href="#"><i class="fa fa-vk"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				<div class="row">
+					<div class="text_footer">
+						<p>Сайт викладача облікових дисциплін</p>
+						<span>Мішиної Людмили</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
+				<div class="row">
+					<div class="contacts_footer">
+						<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
+					</div>
+				</div>
+			</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
-
-	<div class="footer">
-		<div class="container">
-			<div class="col-lg-12">
-				<div class="row">
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="social_footer">
-					<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-					<a href="#"><i class="fa fa-vk"></i></a>
-				</div>
-			</div>
-		</div>
-
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="text_footer">
-					<p>Власниця сайту Мішина Людмила.</p>
-					<span>Всі права захищені.</span>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="contacts_footer">
-					<p><i class="fa fa-phone"></i> Phone</p>
-					<p><i class="fa fa-envelope-o"></i><a href="#">Mail</a></p>
-				</div>
-			</div>
-		</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
 
 
 	<!--[if lt IE 9]>
