--- a/404.html
+++ b/404.html
@@ -30,65 +30,66 @@
 </head>
 <body>
 
-<div class="wrapper">
+	<div class="wrapper">
 
-	<header class="top_header">
-		<div class="header_topline">
-			<div class="container">
-				<div class="row">
+		<header class="top_header">
+			<div class="header_topline">
+				<div class="container">
 					<div class="col-md-12">
-						<div class="soc_buttons">
-							<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-							<a href="#"><i class="fa fa-vk"></i></a>
-						</div>
-						<div class="contacts_head">
-							<p><span><i class="fa fa-phone"></i> Phone</span></p>
-							<p><i class="fa fa-envelope-o"></i><a href="#">Mail</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="header_shapka">
-			<div class="container">
-				<div class="col-md-12">
-					<div class="row">
-
-						<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
-
-						<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
-
-						<div class="main_menu">
-							<ul class="sf-menu">
-								<li class="active"><a href="#"><i class="fa fa-home"></i>Головна</a></li>
-								<li><a href="#"><i class="fa fa-file-text"></i>Методички</a></li>
-								<li><a href="#"><i class="fa fa-archive"></i>Бух облік</a>
-									<ul class="submenu">
-										<li><a href="#">Алалай</a></li>
-										<li><a href="#">Махалай</a></li>
-										<li><a href="#">Мухалай</a></li>
-										<li><a href="#">Тундурик</a></li>
-									</ul>
-								</li>
-								<li><a href="#"><i class="fa fa-folder"></i>Каталог файлів</a></li>
-							</ul>
-						</div>
-
-							<div id="sb-search" class="sb-search">
-								<form>
-									<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
-									<input class="sb-search-submit" type="submit" value="">
-									<span class="sb-icon-search"></span>
-								</form>
+						<div class="row">
+							<div class="top_links">
+								<a href="#" target="_blank">Вхід</a> / 
+								<a href="#" target="_blank">Реєстрація</a>
 							</div>
-
+							<div class="soc_buttons">
+								<a href="#"><i class="fa fa-odnoklassniki"></i></a>
+								<a href="#"><i class="fa fa-vk"></i></a>
+								<a href="#"><i class="fa fa-envelope-o"></i></a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-	</header>
+			<div class="header_shapka">
+				<div class="container">
+					<div class="col-md-12">
+						<div class="row">
+							<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
+							<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
+					<div class="border"></div>
+					<div class="col-md-9">
+						<div class="row">
+							<div class="main_menu">
+								<ul class="sf-menu">
+									<li class="active icon_mob"><a href="#"><img src="img/menu_icons/home.png" alt="home_icon">Головна</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/file.png" alt="file_icon">Методички</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/archive.png" alt="archive_icon">Бух облік</a>
+										<ul class="submenu">
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Алалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Махалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Мухалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Тундурик</a></li>
+										</ul>
+									</li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+								<div id="sb-search" class="sb-search">
+									<form>
+										<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
+										<input class="sb-search-submit" type="submit" value="">
+										<span class="sb-icon-search"></span>
+									</form>
+								</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
 
 	<div class="error_str">
 		<div class="container">
@@ -100,47 +101,39 @@
 		</div>
 	</div>
 
-	<div class="footer">
-		<div class="container">
-			<div class="col-lg-12">
+		<div class="footer">
+			<div class="container">
+				<div class="col-lg-12">
+					<div class="row">
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="social_footer">
-					<a href="#"><i class="fa fa-odnoklassniki"></i></a>
-					<a href="#"><i class="fa fa-vk"></i></a>
+					<div class="social_footer">
+						<a href="#"><i class="fa fa-odnoklassniki"></i></a>
+						<a href="#"><i class="fa fa-vk"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				<div class="row">
+					<div class="text_footer">
+						<p>Сайт викладача облікових дисциплін</p>
+						<span>Мішиної Людмили</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
+				<div class="row">
+					<div class="contacts_footer">
+						<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
+					</div>
+				</div>
+			</div>
+					</div>
 				</div>
 			</div>
 		</div>
 
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="text_footer">
-					<p>Власниця сайту Мішина Людмила.</p>
-					<span>Всі права захищені.</span>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="row">
-				<div class="contacts_footer">
-					<p><i class="fa fa-phone"></i> Phone</p>
-					<p><i class="fa fa-envelope-o"></i><a href="#">Mail</a></p>
-				</div>
-			</div>
-		</div>
-
-				</div>
-			</div>
-		</div>
 	</div>
-
-</div>
-
-
 
 
 	<!--[if lt IE 9]>
