--- a/search_nenaideno.html
+++ b/search_nenaideno.html
@@ -31,18 +31,20 @@
 <body>
 
 	<div class="wrapper">
+
 		<header class="top_header">
 			<div class="header_topline">
 				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
+					<div class="col-md-12">
+						<div class="row">
+							<div class="top_links">
+								<a href="#" target="_blank">Вхід</a> / 
+								<a href="#" target="_blank">Реєстрація</a>
+							</div>
 							<div class="soc_buttons">
 								<a href="#"><i class="fa fa-odnoklassniki"></i></a>
 								<a href="#"><i class="fa fa-vk"></i></a>
-							</div>
-							<div class="contacts_head">
-								<p><span><i class="fa fa-phone"></i> Phone</span></p>
-								<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
+								<a href="#"><i class="fa fa-envelope-o"></i></a>
 							</div>
 						</div>
 					</div>
@@ -53,27 +55,29 @@
 				<div class="container">
 					<div class="col-md-12">
 						<div class="row">
-
 							<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
-
 							<a href="#" class="logotyp"><img src="img/Mishina.png" alt="logo"></a>
-
+					<div class="border"></div>
+					<div class="col-md-9">
+						<div class="row">
 							<div class="main_menu">
 								<ul class="sf-menu">
-									<li class="active"><a href="#"><i class="fa fa-home"></i>Головна</a></li>
-									<li><a href="#"><i class="fa fa-file-text"></i>Методички</a></li>
-									<li><a href="#"><i class="fa fa-archive"></i>Бух облік</a>
+									<li class="active icon_mob"><a href="#"><img src="img/menu_icons/home.png" alt="home_icon">Головна</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/file.png" alt="file_icon">Методички</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/archive.png" alt="archive_icon">Бух облік</a>
 										<ul class="submenu">
-											<li><a href="#">Алалай</a></li>
-											<li><a href="#">Махалай</a></li>
-											<li><a href="#">Мухалай</a></li>
-											<li><a href="#">Тундурик</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Алалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Махалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Мухалай</a></li>
+											<li><a href="#"><img src="img/menu_icons/1c.png" alt="ic_icon">Тундурик</a></li>
 										</ul>
 									</li>
-									<li><a href="#"><i class="fa fa-folder"></i>Каталог файлів</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
+									<li class="icon_mob"><a href="#"><img src="img/menu_icons/folder.png" alt="folder_icon">Каталог файлів</a></li>
 								</ul>
 							</div>
-
+						</div>
+					</div>
 								<div id="sb-search" class="sb-search">
 									<form>
 										<input class="sb-search-input" placeholder="Пошук" type="text" value="" name="search" id="search">
@@ -81,17 +85,14 @@
 										<span class="sb-icon-search"></span>
 									</form>
 								</div>
-
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</header>
 
 		<div class="main_content">
 			<div class="container">
-
 				<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
 					<div class="row">
 						<div class="search_page">
@@ -103,49 +104,77 @@
 								</form>
 							</div>
 						</div>
-
 						<div class="search_nenaideno">
 							<h3>Нічого не знайдено</h3>
 						</div>
-
 					</div>
 				</div>
 
 				<div class="sidebar">
-
 					<div class="col-lg-3 col-md-4">
 						<div class="row">
-
 							<div class="sidebar1">
-								<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-								Sidebar_1
+								<div class="zagolov" id="zagolov_sidebar">Останні записи</div>
+								<div class="recposts">
+									<ul>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Маркетинг у моєму житті</a></li>
+										<li><a href="#"><i class="fa fa-paper-plane-o"></i>Бухгалтерське Лукомор'я</a></li>
+									</ul>
+								</div>
 							</div>
 
 							<div class="sidebar2">
-								<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-								Sidebar_2
+								<div class="zagolov" id="zagolov_sidebar">Корисні посилання</div>
+								<div class="useflinks">
+									<ul>
+										<li><a href="#"><i class="fa fa-dot-circle-o" aria-hidden="true"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+										<li><a href="#"><i class="fa fa-dot-circle-o"></i>Сайт навчального закладу</a></li>
+									</ul>
+								</div>
 							</div>
-
 
 							<div class="sidebar3">
-								<div class="zagolov" id="zagolov_sidebar">zagolovok</div>
-								Sidebar_3
+								<div class="zagolov" id="zagolov_sidebar">Статистика</div>
+								<div class="statistics">
+									<ul>
+										<li>Онлайн всього: 1</li>
+										<li>Гостей: 1</li>
+										<li>Користувачів: 0</li>
+									</ul>
+								</div>
 							</div>
-
+							<div class="mail_form">
+								<a href="#callback" class="button fancybox">Надіслати повідомлення</a>
+							</div>
 						</div>
 					</div>
-
 				</div>
-
 			</div>
+		</div>
+
+		<div class="hidden">
+			<form id="callback" class="pop_form">
+				<h3>Надіслати повідомлення на Gmail</h3>
+				<input type="text" name="name" placeholder="Ваше ім'я..." required /><br>
+				<textarea type="text" name="massage" required></textarea><br>
+				<button class="button" type="submit">Відправити</button>
+			</form>
 		</div>
 
 		<div class="footer">
 			<div class="container">
 				<div class="col-lg-12">
 					<div class="row">
-
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="social_footer">
 						<a href="#"><i class="fa fa-odnoklassniki"></i></a>
@@ -153,25 +182,21 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="row">
 					<div class="text_footer">
-						<p>Власниця сайту Мішина Людмила.</p>
-						<span>Всі права захищені.</span>
+						<p>Сайт викладача облікових дисциплін</p>
+						<span>Мішиної Людмили</span>
 					</div>
 				</div>
 			</div>
-
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 				<div class="row">
 					<div class="contacts_footer">
-						<p><i class="fa fa-phone"></i> Phone</p>
 						<p><a href="#"><i class="fa fa-envelope-o"></i>Mail</a></p>
 					</div>
 				</div>
 			</div>
-
 					</div>
 				</div>
 			</div>
